apps/bgd/overlays/bgd2/bgd2-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bgd2
  name: bgd2
  namespace: bgd
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bgd2
---
