apps/bgd/overlays/bgd2/bgd2-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bgd2
  name: bgd2
  namespace: bgd
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd2
    weight: 100
